--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -7,6 +7,7 @@
      padding: 0;
      box-sizing: border-box;
 }
+/* Resolution scalling queries */
  @media (min-height: 2000px) and (min-width: 3800px) {
      * {
          zoom: 109%;
@@ -17,7 +18,6 @@
          zoom: 104%;
     }
 }
-/* End of resolutions scalling queries */
  html {
      background: #ffffff;
 }
@@ -47,7 +47,6 @@
      font-size: 1em;
      font-family:'serif';
 }
-/* End of query */
 /* h4 headings */
  .headings {
      font-family: "Verdana", "Geneva", "sans-serif";
@@ -78,7 +77,7 @@
     }
 }
 /* End of query */
-/* Align content text at < 768 px */
+/* Align content text at < 768px */
  @media screen and (max-width: 768px) {
      .content {
          margin-right: 1em;
@@ -149,7 +148,6 @@
      position: absolute;
      top: 50%;
      transform: translate(-50%, -50%);
-     
 }
 /* Stories text positioning */
  #stories-wrapper {
@@ -157,7 +155,6 @@
      position: absolute;
      top: 50%;
      transform: translate(-50%, -50%);
-     
 }
  .parallax-header {
      font-size: 6em;
@@ -207,7 +204,7 @@
     }
 }
  @media screen and (max-width: 649px) {
-     #welcome-wrapper, #stories-wrapper  {
+     #welcome-wrapper, #stories-wrapper {
          left: 40%;
     }
 }
@@ -217,7 +214,7 @@
     }
 }
  @media screen and (max-width: 400px) {
-     #welcome-wrapper, #stories-wrapper  {
+     #welcome-wrapper, #stories-wrapper {
          left: 30%;
     }
 }
@@ -274,7 +271,6 @@
      padding: 0 0.6em 0 0;
      font-size: 0.9em;
 }
-/*test this is throwing an error*/
  @media screen (min-width: 320px) {
      .parallax-header {
          font-size: 4em;
@@ -469,9 +465,9 @@
      flex: 3 1 2em;
      border: 1px solid #808080;
 }
-@media screen and (min-width: 421px) {
-    .flex-item > div, .flex-item2 > div { 
-     margin: 20px;    
+ @media screen and (min-width: 421px) {
+     .flex-item > div, .flex-item2 > div {
+         margin: 20px;
     }
 }
  .flex-item2 {
@@ -532,14 +528,12 @@
          padding-right: 5em;
     }
 }
-/*test*/
  @media screen and (min-width: 3000px) {
      .flex-item2, .flex-item {
          padding-left: 40em !important;
          padding-right: 40em !important;
     }
 }
-
 /* End of flex-item styles */
 /* Middle box content styles */
  @media (max-width: 504px) {
@@ -596,12 +590,11 @@
          margin-top: 20px;
     }
 }
-@media (min-width: 2760px) and (max-width: 4000px) {
+ @media (min-width: 2760px) and (max-width: 4000px) {
      .block-content {
          margin-left: 1em;
     }
 }
-
 /* End of queries */
 /* Block content text */
  .content2 {
@@ -609,76 +602,137 @@
      font-size: 0.5em;
      line-height: 1.2em;
 }
-/*test*/
-.contact-background {
-    background-color: #80808014;
-    padding: 8em;
+ .contact-background {
+     background-color: #80808014;
+     padding: 8em;
 }
-@media screen and (max-width: 790px ){
-    .contact-background {
-        padding: 7em;
+ @media screen and (max-width: 790px ){
+     .contact-background {
+         padding: 7em;
     }
 }
-@media screen and (max-width: 700px ){
-    .contact-background {
-        padding: 2em 0 2em 0;
+ @media screen and (max-width: 700px ){
+     .contact-background {
+         padding: 2em 0 2em 0;
     }
 }
 /* Last content */
-#form {
-    /*test*/
-    /* padding: 2em 19em; */
-    padding: 4em 0;
-    /* width: 22em; */
-    margin-left: 1em;
-    margin-right: 1em;
-    /*test*/
-    background: #fff;
-    padding: 50px 40px 35px 40px;
-    box-shadow: 0px 8px 18px 8px rgba(17,21,23,.1);
+ #form {
+     padding: 4em 0;
+     margin-left: 1em;
+     margin-right: 1em;
+     background: #fff;
+     padding: 50px 40px 35px 40px;
+     box-shadow: 0px 8px 18px 8px rgba(17,21,23,.1);
 }
-/* test form positions*//* test
-@media screen and (max-width: 768px) {
-    #form {
-        padding: 0;
+/* From widths change as resolutions get larger */
+ @media screen and (min-width: 1025px) {
+     #form {
+         margin-left: 3em;
+         margin-right: 3em;
     }
-}*/
-.contact-wrap {
-    /*test*/
-   /* margin-right: -15px; */
-    /* margin-left: -15px; */
-    /* max-width: 14em; */
-    text-align: center;
 }
-.contact-heading {
-    margin-bottom: 40px;
+ @media screen and (min-width: 1350px) {
+     #form {
+         margin-left: 7em;
+         margin-right: 7em;
+    }
+}
+ @media screen and (min-width: 1700px) {
+     #form {
+         margin-left: 10em;
+         margin-right: 10em;
+    }
+}
+ @media screen and (min-width: 1800px) {
+     #form {
+         margin-left: 15em;
+         margin-right: 15em;
+    }
+}
+ @media screen and (min-width: 2080px) {
+     #form {
+         margin-left: 25em;
+         margin-right: 25em;
+    }
+}
+ @media screen and (min-width: 2300px) {
+     #form {
+         margin-left: 29em;
+         margin-right: 29em;
+    }
+}
+ @media screen and (min-width: 2500px) {
+     #form {
+         margin-left: 35em;
+         margin-right: 35em;
+    }
+}
+ @media screen and (min-width: 3400px) {
+     #form {
+         margin-left: 45em;
+         margin-right: 45em;
+    }
+}
+ @media screen and (min-width: 3850px) {
+     #form {
+         margin-left: 55em;
+         margin-right: 55em;
+    }
+}
+ @media screen and (min-width: 4000px) {
+     #form {
+         margin-left: 60em;
+         margin-right: 60em;
+    }
+}
+ @media screen and (min-width: 5000px) {
+     #form {
+         margin-left: 77em;
+         margin-right: 77em;
+    }
+}
+/* End of form queries */
+ .contact-wrap {
+     text-align: center;
+}
+ .contact-heading {
+     text-align: center;
+     font-size: 2em;
+     margin-bottom: 40px;
+     font-family: 'Roboto', sans-serif;
+}
+/* Apply a smaller heading for mobiles */
+ @media screen and (max-width: 363px) {
+     .contact-heading {
+         font-size: 24px;
+    }
 }
 /* Space between form areas */
-.form-spacing {
-    margin-bottom: 1em;
+ .form-spacing {
+     margin-bottom: 1em;
 }
-textarea {
-    overflow: auto;
-    resize: vertical;
+ textarea {
+     overflow: auto;
+     resize: vertical;
 }
 /* From input areas */
-.form-area {
-    display: block;
-    width: 100%;
-    padding: 0.5em 0.7em;
-    font-size: 1em;
-    line-height: 1.5em;
-    color: #000000;
-    border: 1px solid #ced4da;
+ .form-area {
+     display: block;
+     width: 100%;
+     padding: 0.5em 0.7em;
+     font-size: 1em;
+     line-height: 1.5em;
+     color: #000000;
+     border: 1px solid #ced4da;
 }
-
-.submit-button {    
-    display: inline-block;
-    border: 1px solid #f3bd0694;
-    background-color: #ffffff;
-    font-size: 1.3em;
-    padding: 0.7em 2.3em;
-    border-radius: 12px;
+ .submit-button {
+     display: inline-block;
+     border: 1px solid #f3bd0694;
+     background-color: #ffffff;
+     font-size: 1.3em;
+     padding: 0.7em 2.3em;
+     border-radius: 12px;
 }
 /* Second flex container */
  .flex-container2 {
