--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -53,8 +53,8 @@
  .h3body {
      text-align: center;
      color: burlywood;
-     text-shadow: 1px 1px black;
-     font-size: 1em;
+     text-shadow: 1px 1px 2px black;
+     font-size: 1.2em;
      font-family:'serif';
 }
 /* h4 headings */
@@ -62,6 +62,10 @@
      font-family: "Verdana", "Geneva", "sans-serif";
      font-size: 0.8em;
      text-align: center;
+}
+.title {
+    color: #000000d9;
+    font-size: 1.6em;
 }
 /* Font styles for content and headings https://www.w3schools.com/cssref/css_websafe_fonts.asp */
  .content {
@@ -89,6 +93,8 @@
  .story-heading {
      font-size: 0.5em;
      color: burlywood;
+     font-weight: bold;
+     
 }
 /* End of query */
  @media screen and (min-width: 839px) and (max-width: 1391px) {
@@ -203,7 +209,7 @@
      text-align: center;
 }
  .navbar a {
-     color: #808080;
+     color: #242424;
      padding: 0.5em;
      text-decoration: none;
      border-bottom: 1px solid #dab506;
@@ -737,6 +743,7 @@
      font-size: 2em;
      margin-bottom: 40px;
      font-family: 'Roboto', sans-serif;
+     text-shadow: 1px 1px 0px black;
 }
 /* Apply a smaller heading for mobiles */
  @media screen and (max-width: 363px) {
