--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -13,16 +13,17 @@
          zoom: 109%;
     }
 }
+/* End of query */
  html {
      background: #ffffff;
 }
 /* Skip to content button */
  .skipbtn {
-    position: absolute;
-    top: -1000px;
-    margin-left: 0.1em;
-    text-align: left;
-    overflow: hidden;
+     position: absolute;
+     top: -1000px;
+     margin-left: 0.1em;
+     text-align: left;
+     overflow: hidden;
 }
  a.skipbtn:active, a.skipbtn:focus, a.skipbtn:hover {
      left: 0;
@@ -32,28 +33,28 @@
      overflow: visible;
 }
 /* Skip to content for tablet and below resolutions */
-@media screen and (max-width: 900px) {
-    .skipbtn {
-    position: absolute;
-    top: -1000px; 
-    margin-left: 6em;
-    margin-top: 6em;
-    color: blue;
-    margin-left: 0.1em;
-    font-size: 1em;
-    text-align: left;
-    z-index: 1;
-    overflow: hidden;
+ @media screen and (max-width: 900px) {
+     .skipbtn {
+         position: absolute;
+         top: -1000px;
+         margin-left: 6em;
+         margin-top: 6em;
+         color: blue;
+         margin-left: 0.1em;
+         font-size: 1em;
+         text-align: left;
+         z-index: 1;
+         overflow: hidden;
     }
      a.skipbtn:active, a.skipbtn:focus, a.skipbtn:hover {
-     left: 0;
-     top: 0;
-     width: auto;
-     height: auto;
-     overflow: visible;
+         left: 0;
+         top: 0;
+         width: auto;
+         height: auto;
+         overflow: visible;
     }
 }
-
+/* End of query */
  body {
      font-family: "Tahoma", "Geneva", "sans-serif";
      font-size: 1em;
@@ -86,10 +87,17 @@
      font-size: 0.8em;
      text-align: center;
 }
-.title {
-    color: #000000d9;
-    font-size: 1.6em;
+ .title {
+     color: #000000d9;
+     font-size: 1.6em;
 }
+/* Align the header at tablet resolution and below */
+ @media screen and (max-width: 900px) {
+     .content-header {
+         margin-top: 3em;
+    }
+}
+/* End of query */
 /* Font styles for content and headings https://www.w3schools.com/cssref/css_websafe_fonts.asp */
  .content {
      font-family: "Tahoma", "Geneva", "sans-serif";
@@ -113,11 +121,11 @@
          font-size: 0.4em;
     }
 }
+/* End of query */
  .story-heading {
      font-size: 0.5em;
      color: burlywood;
      font-weight: bold;
-     
 }
 /* End of query */
  @media screen and (min-width: 839px) and (max-width: 1391px) {
@@ -139,10 +147,18 @@
          margin-right: 1em;
     }
 }
-/*test*/
-.required {
-    text-align: left;
-    color: #000000;
+/* End of query */
+/* Seperate content text at < 768px */
+ @media screen and (max-width: 768px) {
+     .content3 {
+         margin-bottom: 2em;
+    }
+}
+/* End of query */
+/* Align required text for form */
+ .required {
+     text-align: left;
+     color: #000000;
 }
 /* End of query */
 /* Hero image styles */
@@ -187,7 +203,7 @@
 /* Change mid image at tablet and below */
  @media screen and (max-width: 900px) {
      .parallax-image2 {
-         background-image: url(../images/contenttwo.jpg); 
+         background-image: url(../images/contenttwo.jpg);
          height: 13em;
          position: relative;
          display: block;
@@ -384,7 +400,7 @@
          text-decoration: none;
          font-size: 20px;
          padding: 10px;
-         margin-top: 0.6em;
+         margin-top: 0.2em;
     }
      .topbtn:hover {
          color: rgb(6, 98, 196);
@@ -408,6 +424,10 @@
  .divorigins {
      display: inline-block;
 }
+/*test*/
+.secondary-heading {
+    visibility: hidden;
+}
 /* Footer styles */
  footer {
      margin-top: 0px;
@@ -426,7 +446,10 @@
 }
 /* Footer links main colour */
  .footerclicked, .footerclicked:visited {
-     color: #060f82;
+     color: #000000;
+}
+ .footerclicked:hover {
+    color: blue !important;
 }
 /* Footer styles above tablets */
  @media screen and (min-width: 900px) {
@@ -681,11 +704,13 @@
          padding: 7em;
     }
 }
+/* End of query */
  @media screen and (max-width: 700px ){
      .contact-background {
          padding: 2em 0 2em 0;
     }
 }
+/* End of query */
 /* Last content */
  #form {
      margin-left: 1em;
@@ -797,8 +822,8 @@
      color: #000000;
      border: 1px solid #ced4da;
 }
-textarea::placeholder {
-     display: block;  
+ textarea::placeholder {
+     display: block;
 }
  .submit-button {
      display: inline-block;
